--- a/main.ipynb
+++ b/main.ipynb
@@ -1161,6 +1161,104 @@
       "n_estimators: 100, max_depth: 9, train_score: 0.6955042276758094, test_score: 0.6490721649484537\n",
       "n_estimators: 100, max_depth: 11, train_score: 0.7191173437822231, test_score: 0.6515463917525773\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|####2     | 3/7 [01:00<01:23, 20.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators: 100, max_depth: 13, train_score: 0.7448958548154259, test_score: 0.657319587628866\n",
+      "n_estimators: 120, max_depth: 3, train_score: 0.6465250567127243, test_score: 0.6494845360824743\n",
+      "n_estimators: 120, max_depth: 5, train_score: 0.6601361105382553, test_score: 0.650721649484536\n",
+      "n_estimators: 120, max_depth: 7, train_score: 0.6745720767168488, test_score: 0.6515463917525773\n",
+      "n_estimators: 120, max_depth: 9, train_score: 0.6941637451020829, test_score: 0.6490721649484537\n",
+      "n_estimators: 120, max_depth: 11, train_score: 0.7188080016498247, test_score: 0.6519587628865979\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|#####7    | 4/7 [01:26<01:08, 22.84s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators: 120, max_depth: 13, train_score: 0.7472674778304805, test_score: 0.6548453608247423\n",
+      "n_estimators: 140, max_depth: 3, train_score: 0.6480717673747164, test_score: 0.6474226804123712\n",
+      "n_estimators: 140, max_depth: 5, train_score: 0.6607547948030522, test_score: 0.6548453608247423\n",
+      "n_estimators: 140, max_depth: 7, train_score: 0.6740565064961848, test_score: 0.650721649484536\n",
+      "n_estimators: 140, max_depth: 9, train_score: 0.6959166838523407, test_score: 0.6457731958762887\n",
+      "n_estimators: 140, max_depth: 11, train_score: 0.7184986595174263, test_score: 0.6548453608247423\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|#######1  | 5/7 [01:56<00:50, 25.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators: 140, max_depth: 13, train_score: 0.745926995256754, test_score: 0.6597938144329897\n",
+      "n_estimators: 160, max_depth: 3, train_score: 0.6480717673747164, test_score: 0.6441237113402062\n",
+      "n_estimators: 160, max_depth: 5, train_score: 0.6610641369354506, test_score: 0.6519587628865979\n",
+      "n_estimators: 160, max_depth: 7, train_score: 0.6740565064961848, test_score: 0.6478350515463918\n",
+      "n_estimators: 160, max_depth: 9, train_score: 0.6945762012786142, test_score: 0.6503092783505154\n",
+      "n_estimators: 160, max_depth: 11, train_score: 0.7179830892967622, test_score: 0.6548453608247423\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|########5 | 6/7 [02:30<00:28, 28.32s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators: 160, max_depth: 13, train_score: 0.7472674778304805, test_score: 0.6589690721649485\n",
+      "n_estimators: 180, max_depth: 3, train_score: 0.6464219426685914, test_score: 0.6445360824742268\n",
+      "n_estimators: 180, max_depth: 5, train_score: 0.6610641369354506, test_score: 0.6515463917525773\n",
+      "n_estimators: 180, max_depth: 7, train_score: 0.6737471643637863, test_score: 0.650721649484536\n",
+      "n_estimators: 180, max_depth: 9, train_score: 0.694679315322747, test_score: 0.6515463917525773\n",
+      "n_estimators: 180, max_depth: 11, train_score: 0.7184986595174263, test_score: 0.6560824742268041\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 7/7 [03:09<00:00, 27.06s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators: 180, max_depth: 13, train_score: 0.7479892761394102, test_score: 0.657319587628866\n",
+      "best score: 0.6597938144329897, best i: 140, best j: 13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
