--- a/main.ipynb
+++ b/main.ipynb
@@ -1326,7 +1326,10 @@
     "ax.set_ylabel('max_depth')\n",
     "ax.set_zlabel('score')\n",
     "plt.legend([\"test\", \"train\"], loc =\"lower right\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# The deeper the tree is, the more likely it is to overfit (though with higher score).\n",
+    "# since 65% is not a good score, we try xgboost\n"
    ]
   },
   {
@@ -1542,7 +1545,9 @@
     "ax.set_xlabel('i')\n",
     "ax.set_ylabel('j')\n",
     "ax.set_zlabel('score')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# same thing here, it get overfitted when max_depth is too high and learning rate is too high\n"
    ]
   },
   {
