--- a/main.ipynb
+++ b/main.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "4  2009-12-01 07:45:00   1.25      13085.0  United Kingdom  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "4        30.0  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "4        12747  [490678, 491045, 492300, 497572, 498399, 50072..."
       ]
      },
-     "execution_count": 138,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,99 +857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Invoice</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>TotalPrice</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>StockCode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>489434</td>\n",
-       "      <td>166</td>\n",
-       "      <td>505.30</td>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>489435</td>\n",
-       "      <td>60</td>\n",
-       "      <td>145.80</td>\n",
-       "      <td>2009-12-01 07:46:00</td>\n",
-       "      <td>[8, 9, 10, 11]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>489436</td>\n",
-       "      <td>193</td>\n",
-       "      <td>630.33</td>\n",
-       "      <td>2009-12-01 09:06:00</td>\n",
-       "      <td>[12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>489437</td>\n",
-       "      <td>145</td>\n",
-       "      <td>310.75</td>\n",
-       "      <td>2009-12-01 09:08:00</td>\n",
-       "      <td>[31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 4...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>489438</td>\n",
-       "      <td>826</td>\n",
-       "      <td>2286.24</td>\n",
-       "      <td>2009-12-01 09:24:00</td>\n",
-       "      <td>[53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 6...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  Invoice  Quantity  TotalPrice         InvoiceDate  \\\n",
-       "0  489434       166      505.30 2009-12-01 07:45:00   \n",
-       "1  489435        60      145.80 2009-12-01 07:46:00   \n",
-       "2  489436       193      630.33 2009-12-01 09:06:00   \n",
-       "3  489437       145      310.75 2009-12-01 09:08:00   \n",
-       "4  489438       826     2286.24 2009-12-01 09:24:00   \n",
-       "\n",
-       "                                           StockCode  \n",
-       "0                           [0, 1, 2, 3, 4, 5, 6, 7]  \n",
-       "1                                     [8, 9, 10, 11]  \n",
-       "2  [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 2...  \n",
-       "3  [31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 4...  \n",
-       "4  [53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 6...  "
+       "(33361, 5)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,12 +901,14 @@
     "feature_list = []\n",
     "label_list = []\n",
     "start_year = 2009\n",
-    "max_quater = max(list(invoice_data[\"InvoiceDate\"].apply(lambda x: quarter_count(x))))\n",
+    "\n",
     "\n",
     "# get the quarter count of a date (from 2099)\n",
     "def quarter_count(date):\n",
     "    date = pd.to_datetime(date)\n",
     "    return (date.year - start_year) * 4 + date.quarter\n",
+    "\n",
+    "max_quater = max(list(invoice_data[\"InvoiceDate\"].apply(lambda x: quarter_count(x))))\n",
     "\n",
     "# tell if a costomer has bought in the next certain quarter\n",
     "def get_label(quater_count, quarter_list):\n",
@@ -1830,11 +1749,11 @@
     "            xgb_result[\"Training Accuracy scores\"],\n",
     "            xgb_result[\"Validation Accuracy scores\"])\n",
     "\n",
-    "for i in range(len(result[\"Training Accuracy scores\"])):\n",
-    "    print(f\"Training Accuracy: {result['Training Accuracy scores'][i]}, Validation Accuracy: {result['Validation Accuracy scores'][i]}\")\n",
-    "    print(f\"Training Precision: {result['Training Precision scores'][i]}, Validation Precision: {result['Validation Precision scores'][i]}\")\n",
-    "    print(f\"Training Recall: {result['Training Recall scores'][i]}, Validation Recall: {result['Validation Recall scores'][i]}\")\n",
-    "    print(f\"Training F1: {result['Training F1 scores'][i]}, Validation F1: {result['Validation F1 scores'][i]}\")\n",
+    "for i in range(len(xgb_result[\"Training Accuracy scores\"])):\n",
+    "    print(f\"Training Accuracy: {xgb_result['Training Accuracy scores'][i]}, Validation Accuracy: {xgb_result['Validation Accuracy scores'][i]}\")\n",
+    "    print(f\"Training Precision: {xgb_result['Training Precision scores'][i]}, Validation Precision: {xgb_result['Validation Precision scores'][i]}\")\n",
+    "    print(f\"Training Recall: {xgb_result['Training Recall scores'][i]}, Validation Recall: {xgb_result['Validation Recall scores'][i]}\")\n",
+    "    print(f\"Training F1: {xgb_result['Training F1 scores'][i]}, Validation F1: {xgb_result['Validation F1 scores'][i]}\")\n",
     "    print(\"=\"*50)\n"
    ]
   },
